# nbody-simulation

./: .gitignore  README.md  install_macos.py  pyproject.toml  setup.py  setup.py~  setup_macos.py  test_basic.py
.github/workflows/: build.yml
src/nbody/: __init__.py  core.py
src/nbody/_nbody_c/: __init__.py  nbody_comp.c  nbody_comp.c~  nbody_wrapper.c
src/nbody/_nbody_c/fftw_static/lib/: fftw3.pc
src/nbody/data/: input.nbody_comp
