[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nbody-simulation"
version = "0.2.0"
description = "High-performance N-body simulation - cross-platform Python package"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research", 
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]
keywords = ["nbody", "simulation", "cosmology", "physics", "fftw"]
dependencies = []
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/PragunNepal/nbody-simulation"
Repository = "https://github.com/PragunNepal/nbody-simulation.git"
Issues = "https://github.com/PragunNepal/nbody-simulation/issues"

[project.scripts]
nbody-run = "nbody.core:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nbody = ["data/*", "_nbody_c/*"]
